# autogen_agents

./: .gitignore  PRD.md  ba-team.py  config.ini.example  config.toml  embedded_text copy.py  gradio_demo.py  linux_tool_export.md  linux_tool_export.py  main.py  prompt_engneer_team.py  prompt_generator.md  pyproject.toml  rust-book.py  rust文档向量化.py  test_team.py  web_develop_team copy.py  web_develop_team.py  web开发专家.md  workflow.md
coding/: tmp_code_618c73594176d9d580bdd6974e22fab0fc7b6159ea49c8bebca179e310a8da54.bash
conf/: __init__.py  config.py
