[project]
name = "autogen-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[magentic-one,openai,ui,web-surfer]>=0.7.5",
    "dynaconf>=3.2.11",
    "gradio>=6.0.2",
    "ipykernel>=7.1.0",
    "playwright>=1.56.0",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
